<package>
  <name>rqt_giskard</name>
  <version>0.4.1</version>
  <description>
    todo
  </description>

  <maintainer email="m.staniaszek@gmail.com">Michal Staniaszek</maintainer>
  <maintainer email="stonier@yujinrobot.com">Daniel Stonier</maintainer>
  <maintainer email="naveedhd@gmail.com">Naveed Usmani</maintainer>

  <license>BSD</license>  

  
  <author>Thibault Kruse</author>
  <author>Michal Staniaszek</author>
  <author>Daniel Stonier</author>
  <author>Naveed Usmani</author>
  <author>Simon Stelter</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rqt_bag</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>python3-rospkg</run_depend>
  <run_depend>python3-termcolor</run_depend>
  <run_depend>qt_dotgraph</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rqt_graph</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  <run_depend>rqt_bag</run_depend>
  <run_depend>unique_id</run_depend>
  <run_depend>python3-pygraphviz</run_depend>

  <test_depend>python3-mock</test_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
